# chain-of-feelings

./: .gitignore  CLAUDE.md  dashboard.html  pyproject.toml
data/failure_cases/: calibration.jsonl  delayed_consequences.jsonl  overthinking.jsonl  reward_hacking.jsonl  sycophancy.jsonl
scripts/: build_eval_set.py  collect_viz_data.py  run_ablation.py  run_interp.py  run_training.py  serve_dashboard.py  validate_scaffolding.py  validate_surgery.py
src/ablation/: harness.py  metrics.py
src/affect/: film.py  injection.py  module.py
src/eval/: failure_cases.py  metrics.py  scaffolding.py
src/interp/: analysis.py  collect.py  sae.py
src/training/: data.py  loop.py  loss.py
