[project]
name = "chain-of-feelings"
version = "0.1.0"
description = "Explicit affect channel for transformer decision-making under uncertainty"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.53.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "datasets>=2.19.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "anthropic>=0.25.0",
    "timm>=1.0.26",
]

[project.optional-dependencies]
interp = ["sae-lens>=4.0.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
